--- a/PanificadoraDocetelie.html
+++ b/PanificadoraDocetelie.html
@@ -13,7 +13,7 @@
 <p aling="center">Nossa meta é "Proporcionar os melhores cafés e doces de São Paulo"</p>
 <p aling="center">Oferecemos cafeteiros e confeiteiros  exelentes na área.</p>
 <p aling="center">Queremos proporcionar uma exelente experiencia gastronomica, agilidade no atendimento e fluxo de pedidos, garantindo clientes satisfeitos e fidelizados.</p>
-Todo doce que aqui é feito recebe uma <b>doce extra de amor</b>, cuidado, e muita, muita dedicação.</p>
+<p aling="center">Todo doce que aqui é feito recebe uma <b>doce extra de amor</b>, cuidado, e muita, muita dedicação.</p>
 <p aling="center">Conheça um pouco do cardápio da Cafeteria Docetelie.</p>
 
 <h2>Cafés</h2>
