--- a/PanificadoraDocetelie.html
+++ b/PanificadoraDocetelie.html
@@ -9,11 +9,11 @@
 <body> 
 
   <h2 aling="center">Cafeteria Docetelie</h2>
-  <p aling="center">Localizada em São Paulo, na Avenida Paulista <strong>Cafeteria Docetelie</strong> traz aos seus clientes qualidade e diversos sabores, fundada em 2031, a Cafeteria Docetelie já é destaque na Avenida  e conquista qualquer coração que por ali passa e experimenta.</p>
+<p aling="center">Localizada em São Paulo, na Avenida Paulista <strong>Cafeteria Docetelie</strong> traz aos seus clientes qualidade e diversos sabores, fundada em 2031, a Cafeteria Docetelie já é destaque na Avenida  e conquista qualquer coração que por ali passa e experimenta.</p>
 <p aling="center">Nossa meta é "Proporcionar os melhores cafés e doces de São Paulo"</p>
 <p aling="center">Oferecemos cafeteiros e confeiteiros  exelentes na área.</p>
 <p aling="center">Queremos proporcionar uma exelente experiencia gastronomica, agilidade no atendimento e fluxo de pedidos, garantindo clientes satisfeitos e fidelizados.</p>
-<p aling="center">Todo doce que aqui é feito recebe uma <b>doce extra de amor</b>, cuidado, e muita, muita dedicação.</p>
+<p aling="center">Todo doce que aqui é feito recebe uma <b>dose extra de amor</b>, cuidado, e muita, muita dedicação.</p>
 <p aling="center">Conheça um pouco do cardápio da Cafeteria Docetelie.</p>
 
 <h2>Cafés</h2>
